@@ -48,6 +48,7 @@
                 </div>
                 <div class="modal-inner">
                     Import Backup
+                    <span style="display: block; color: red; padding: 4px 0px;">This will replace your data!</span>
                     <button for="input-file" class="input-json-button">Select JSON File</button>
                     <div class="import-result"></div>
                 </div>
